chore: Resize top navbar and logo text inside it

--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@
                     CSS
                 </div>
                 <div class="skillBox">
+                    <a class="icon devicon-tailwindcss-plain"></a>
+                    Tailwind
+                </div>
+                <div class="skillBox">
                     <a class="icon devicon-javascript-plain"></a>
                     JavaScript
                 </div>
