feat: Added new backgrounds, navbar and site animations, improved appearance for mobile devices

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="stylesheet" href="style/style.css" type="text/css">
     <link rel="stylesheet" href="style/mediaqueries.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
@@ -14,7 +14,6 @@
     <nav>
         <div class="mainLogo"><a href="#">Emman Ruiz</a></div>
         <ul class="mainNavLinks">
-            <li><a href="#">Home</a></li>
             <li><a href="#aboutme">About me</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#skills">Skills</a></li>
