--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <style type="text/css">
         @font-face {
             src: url(fonts/OverusedGroteskRoman-VF.ttf);
