update: Removed image backgrounds to improve performance. Replaced it with a temporary light theme for now. Also fixed some bug with the navbar when hovering items

--- a/404.html
+++ b/404.html
@@ -13,9 +13,8 @@
             font-family: Overused-Grotesk;
             text-align: center;
             font-size: 2em;
-            background-color: #222;
-            color: white;
-            text-shadow: 6px 6px 7px black;
+            background-color: #eee;
+            color: #222;
         }
 
         body h1 {
@@ -25,7 +24,7 @@
 
         body a {
             transition: 0.2s;
-            color: #eee;
+            color: #222;
         }
 
         body a:hover {
